<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">StopLy</string>
    <string name="battery_dialog_title">Désactiver l\'optimisation de la batterie?</string>
    <string name="battery_dialog_message">NOUS RECOMMANDONS FORTEMENT DE DÉSACTIVER CELA. Le système Android tuera l\'application après un court instant si cela est activé!</string>
    <string name="app_selector_cancel">Annuler</string>
    <string name="app_selector_clear">Claire</string>
    <string name="permission_check_title">Voulez-vous donner des autorisations d\'utilisation?</string>
    <string name="permission_check_message">Sans cette autorisation, l\'application ne fonctionnera pas</string>
    <string name="not_running">La minuterie de verrouillage ne fonctionne pas</string>
    <string name="drawer_item1_text">Sélectionnez des applications</string>
    <string name="app_selector_title">Sélectionnez des applications</string>
    <string name="app_selector_apply">Appliquer</string>
    <string name="lock_button">VERROUILLER !</string>
    <string name="lockBT_dialog_title">Confirmer les sélections?</string>
    <string name="drawer_item6_text">Applications sélectionnées</string>
    <string name="custom_list_title">"Applications sélectionnées "</string>
    <string name="lockBT_dialog_message">Vous ne pouvez pas modifier ces paramètres avant la fin de la minuterie!</string>
    <string name="Settings_dialog1_D">Vous devez actualiser pour que les modifications prennent effet.</string>
    <string name="title">StopLy</string>
    <string name="description">&#128072; Swipe here for more settings</string>
    <string name="system_wide_lock">SYSTEM LOCK-DOWN</string>
    <string name="start_by_swiping_left">Start by swiping left.</string>
    <string name="select_desired_state">Select Desired State.</string>
    <string name="select_desired_time">Select Desired Time.</string>
    <string name="time_left1">Time Left:&#160;</string>
    <string name="time_left2" translatable="false">Temps restant pour déverrouiller</string>
    <string name="time_chosen">Time Chosen:&#160;</string>
    <string name="times">&#160;Times</string>
    <string name="app_open1">State:&#160;</string>
    <string name="app_open2">Selected State:&#160;</string>
    <string name="minutes">&#160;Minutes</string>
    <string name="hours">Hours:&#160;</string>
    <string name="selected_time">State:&#160;</string>
    <string name="selected_state">État sélectionné:</string>
    <string name="selected_apps">Applications sélectionnées</string>
    <string name="open_times">+ Temps</string>
    <string name="dialog_description">v7.0r Une application qui essaie simplement de vous aider à atteindre une journée plus productive; Si cela vous a aidé, il serait grandement apprécié de laisser une note!</string>
    <string name="toast_already_running">Minuterie déjà en cours d\'exécution, nouvelle sélection ignorée</string>
    <string name="toast_no_hour_selection">Aucune heure sélectionnée</string>
    <string name="cafebar_error">Veuillez sélectionner l\'heure de verrouillage souhaitée</string>
    <string name="toast_no_state_selection">Aucun état sélectionné</string>
    <string name="cafebar_error2">Sélectionnez au moins 1 application à verrouiller</string>
    <string name="cafebar_error3">Minuterie déjà en cours d\'exécution</string>
    <string name="cafebar_error4">Sélections effacées</string>
    <string name="cafebar_error5">Applications déjà sélectionnées, attendez la fin du minuteur</string>
    <string name="drawer_item1_text2">Sélectionnez les applications à verrouiller</string>
    <string name="drawer_item6_text2">Applications que vous avez déjà enregistrées</string>
    <string name="drawer_item7_text">Réglages</string>
    <string name="drawer_item7_text2">Réglages</string>
    <string name="drawer_item8_text">Donate</string>
    <string name="drawer_item8_text2">Pas nécessaire, mais très apprécié!</string>
    <string name="drawer_header">a</string>
    <string name="drawer_item2_dialog_title">Aidez-moi</string>
    <string name="drawer_item2_dialog_message">Informations générales:  1- Vous NE POUVEZ PAS verrouiller les applications sans sélectionner une minuterie 2- Vous POUVEZ verrouiller les applications sans sélectionner un état 3- L\'application se fermera lorsque vous confirmerez le verrouillage et une notification s\'affichera 4- Vous pouvez ignorer la notification, et une notification Minuterie terminée s\'affichera lorsque le verrouillage est terminé  ______  -Sélectionnez l\'heure souhaitée: Cette option est l\'endroit où la magie opère, vous sélectionnez l\'heure souhaitée, qui sera la durée du verrouillage des applications. Après avoir sélectionné cette option, vous ne pouvez pas la modifier tant que le verrouillage n\'est pas terminé. Veuillez ne pas forcer la fermeture de l\'application ou vous devrez effacer les données de l\'application.  -État désiré: S\'il est activé, il désactivera le Wi-Fi / les données pour le temps restant du verrouillage et le réactivera une fois le verrouillage terminé.  C\'est tout !</string>
    <string name="drawer_item5_dialog_title">À propos</string>
    <string name="drawer_item5_dialog_message">Liens sociaux ci-dessous</string>
    <string name="notification_title1">Cliquez pour ouvrir l\'application</string>
    <string name="notification_title2">Verrouillage terminé!</string>
    <string name="swipe_item1">Le système Android tuera l\'application après un court instant si cela est activé!</string>
    <string name="swipe_item3">J\'ai besoin de terminer une tâche qui demande un peu de temps, verrouiller mes applications pendant 2 heures</string>
    <string name="swipe_item4">Aidez-moi s\'il vous plaît !! Verrouillez mes applications pendant 3 heures!</string>
    <string name="swipe_item6">Désactivez le WiFi + les données mobiles</string>
    <string name="swipe_root_alert">S\'il est activé, il désactivera le Wi-Fi / les données pour le temps restant du verrouillage et le réactivera une fois le verrouillage terminé.</string>
    <string name="custom_list_version">Version:&#160;</string>
    <string name="drawer_item3_dialog_title">Changements récents</string>
    <string name="notification_message">Vous pouvez à nouveau utiliser vos applications</string>
    <string name="swipe_item2">Rapide et rapide, verrouillez mes applications pendant 1 heure</string>
    <string name="swipe_item5">Désactiver le WiFi</string>
    <string name="custom_list_name">Nom</string>
    <string name="custom_list_hint">(Cliquez sur les applications pour plus d\'informations)</string>
    <string name="usage_dialog_message">Utilisation aujourd\'hui</string>
    <string name="usage_dialog_title">Informations sur l\'application</string>
    <string name="usage_dialog_bt1">Paramètres de l\'application</string>
    <string name="usage_dialog_bt2">Démarrer l\'application</string>
    <string name="privacy_element">Politique de confidentialité</string>
    <string name="FDroid_element">Obtenez sur F-Droid</string>
    <string name="Settings_title1">Notifications</string>
    <string name="Settings_title2">Interface utilisateur de l\'application</string>
    <string name="Settings_title3">Options de verrouillage</string>
    <string name="Settings_title4">Information</string>
    <string name="Settings_title5">Liens</string>
    <string name="Settings_item1_T">Notifications GOYP</string>
    <string name="Settings_item1_D">Afficher les notifications de début / fin de verrouillage</string>
    <string name="Settings_item2_T">Bloquer les notifications d\'applications</string>
    <string name="Settings_item2_D">Bloquer toutes les notifications (Android M + UNIQUEMENT)</string>
    <string name="Settings_item3_T">Thème léger</string>
    <string name="Settings_item3_D">Activer le thème de l\'application légère</string>
    <string name="Settings_item4_T">Minuterie inverse</string>
    <string name="Settings_item4_D">Bientôt disponible</string>
    <string name="Settings_item5_T">Aide</string>
    <string name="Settings_item5_D">Informations importantes sur l\'utilisation</string>
    <string name="Settings_item6_T">Changements récents</string>
    <string name="Settings_item6_D">Quoi de neuf dans cette version</string>
    <string name="Settings_item7_T">Bibliothèques</string>
    <string name="Settings_item7_D">Ce que j\'ai utilisé pour cuisiner cette application</string>
    <string name="Settings_item8_T">À propos de moi</string>
    <string name="Settings_item8_D">Liens sociaux</string>
    <string name="Settings_dialog1_T">Actualiser l\'application?</string>
    <string name="Settings_dialog2_T">Ne pas déranger l\'accès</string>
    <string name="Settings_dialog2_D">L\'accès au MDN est requis pour cette option.</string>
    <string name="Settings_dialog3_D">L\'activation de cette option bloquera TOUTES les notifications système. Cela signifie que vous ne recevrez même pas d\'appels téléphoniques ou d\'alarmes! Cela s\'éteindra d\'elle-même après le verrouillage et vous recevrez toutes les notifications en même temps.</string>
    <string name="Settings_dialog3_T">ATTENTION</string>
    <string name="changes">Si vous forcez la fermeture de l\'application, vous devez réactiver manuellement le volume de l\'alarme et des appels téléphoniques.</string>
    <string name="Toast_1">Les notifications seront bloquées après le démarrage du verrouillage</string>
    <string name="Hours_v2">Heures</string>

    <string name="state">\nState</string>

</resources>