<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main">


    <TextView
        android:id="@+id/title_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--    <hiennguyen.me.circleseekbar.CircleSeekBar-->
    <!--        android:id="@+id/circular"-->
    <!--        android:layout_width="57dp"-->
    <!--        android:layout_height="328dp"-->
    <!--        android:padding="64dp"-->
    <!--        app:csb_arcColor="@color/color_arc"-->
    <!--        app:csb_arcWidth="6dp"-->
    <!--        app:csb_max="1000"-->
    <!--        app:csb_min="10"-->
    <!--        app:csb_progress="300"-->
    <!--        app:csb_progressColor="#00aad4"-->
    <!--        app:csb_progressWidth="12dp"-->
    <!--        app:csb_step="5"-->
    <!--        app:csb_textColor="@color/color_text"-->
    <!--        app:csb_textSize="36sp"-->
    <!--        app:csb_thumbDrawable="@drawable/ic_circle_seekbar"-->
    <!--        app:csb_thumbSize="36dp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.06"-->
    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
    <!--        app:layout_constraintRight_toRightOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.0" />-->

    <com.github.stefanodp91.android.circularseekbar.CircularSeekBar
        android:id="@+id/seek"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cs_arcRadius="110dp"
        app:cs_color_list="@array/color_list"
        app:cs_dynamic_text_color="true"
        app:cs_indicator_enabled="true"
        app:cs_progress="10"
        app:cs_text="0h 30min"
        app:cs_text_progress="false"
        app:cs_text_size="10dp"
        app:layout_constraintBottom_toBottomOf="@id/selectAppsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/title_timer" />

    <com.roughike.swipeselector.SwipeSelector
        android:id="@+id/hours_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@android:style/Theme.NoDisplay"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek"
        app:swipe_descriptionTextAppearance="@style/SwiperDescription"
        app:swipe_itemsXmlResource="@xml/items_size"
        app:swipe_titleTextAppearance="@style/SwiperTitle"
        app:swipe_unselectedItemDescription="@string/start_by_swiping_left"
        app:swipe_unselectedItemTitle="@string/select_desired_time" />



    <com.roughike.swipeselector.SwipeSelector
        android:visibility="gone"
        android:theme="@android:style/Theme.NoDisplay"
        android:id="@+id/counter_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:swipe_titleTextAppearance="@style/SwiperTitle"
        app:swipe_descriptionTextAppearance="@style/SwiperDescription"
        app:swipe_itemsXmlResource="@xml/items_toppings"
        app:swipe_unselectedItemDescription="@string/start_by_swiping_left"
        app:swipe_unselectedItemTitle="@string/select_desired_state"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hours_selector"/>





    <LinearLayout
        android:id="@+id/linearLayout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Start Time"
                android:textColor="@color/black" />

            <TimePicker
                android:id="@+id/timePicker1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:gravity="center"
                android:timePickerMode="spinner" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="End Time"
                android:textColor="@color/black" />

            <TimePicker
                android:id="@+id/timePicker2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:calendarViewShown="false"
                android:gravity="center"
                android:timePickerMode="spinner" />

        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/selectAppsButton"
        style="?attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/mybutton"
        android:text="Sélectionner applications"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/showSelectedAppsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek" />

    <Button
        android:id="@+id/showSelectedAppsButton"
        style="?attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="487dp"
        android:background="@drawable/mybutton"
        android:text="Afficher les applications séléctionnées"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/sendButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectAppsButton" />

    <Button
        android:id="@+id/sendButton"
        style="?attr/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="555dp"
        android:background="@drawable/mybutton2"
        android:text="@string/lock_button"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showSelectedAppsButton" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:theme="@style/BottomNavigationTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendButton"
        app:menu="@menu/bottom_navigation_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>